fix the problem of components overlapping(.search-vitamin & .picked-vitamin)

--- a/frontend/src/Combination.css
+++ b/frontend/src/Combination.css
@@ -4,21 +4,20 @@
 }
 
 .search-vitamin{
-  height: 1000px;
+  height: 650px;
   overflow: auto;
-  width: calc(28.33%);
+  width: calc(25%);
 }
 
 .picked-vitamin {
-  position: fixed;
-  left: calc(32.33%);
-  width: calc(24.33%);
+  overflow: auto;
+  left: calc(25%);
+  width: calc(25%);
 }
 
 .graph-vitamin{
-  position: fixed;
-  left: calc(56.66%);
-  width: calc(43.33%);
+  left: calc(50%);
+  width: calc(50%);
   height: 300px;
 }
 
